--- a/1.Intro-Bandit/v2.0-initial_stepsize/0.prerequisites.md
+++ b/1.Intro-Bandit/v2.0-initial_stepsize/0.prerequisites.md
@@ -16,7 +16,7 @@ $$Q_{n+1} \doteq Q_n + \alpha [R_n - Q_n]$$
 
 
 >指数近因加权平均
-- 由上式推导一下
+- 由上式推导，可以知道改成 $\alpha$ 本质上就是指数近因加权平均
 
 $$Q_{n+1} = Q_n + \alpha[R_n-Q_n]$$
 $$= \alpha R_n + (1-\alpha)Q_n$$
