--- a/1.Intro-Bandit/v4.0-gradient_baseline/0.prerequisite.md
+++ b/1.Intro-Bandit/v4.0-gradient_baseline/0.prerequisite.md
@@ -13,6 +13,7 @@ class Bandit:
         # 改成了 softmax
         exp_est = np.exp(self.q_estimation)
         self.action_prob = exp_est / np.sum(exp_est)
+        # 按概率去选择 Action，那么概率大的 Action 被选中的次数就会多
         return np.random.choice(self.indices, p=self.action_prob)
     ...
 ```
